--- a/ejemplos/test/test.html
+++ b/ejemplos/test/test.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style-test.css">
+    <!-- <link rel="stylesheet" href="style-test.css"> -->
+     <link rel="stylesheet" href="styles-responsive.css">
 </head>
 
 <body>
