Feat: Estructuracion de clase principal con constructor y funciones inciales

--- a/tic-tac-toe-jc Base/index.html
+++ b/tic-tac-toe-jc Base/index.html
@@ -33,5 +33,6 @@
             <button id="new-game-btn">New Game</button>
         </div>
     </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
